# llm-finetuning

./: .gitignore  README.md  llm-finetuning.ipynb  pre-trained-baseline.ipynb  pyproject.toml
src/: __init__.py  base_finetuner.py  core_finetuner.py
src/finetuner/: __init__.py  adalora.py  delta_lora.py  full_finetuner.py  lora.py  lora_fa.py  lora_plus.py  p_tuning.py  prompt_tuning.py  qlora.py  vera.py
src/methods/: 01_full_finetuning.py  02_lora.py  03_lora_fa.py  05_delta_lora.py  06_qlora.py  __init__.py  delta_lora.py  full_finetuning.py  lora_plus.py  p_tuning_v2.py  prompt_tuning.py  qlora.py  vera.py
src/utils/: data_loader.py  evaluation.py
