[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.48.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "datasets>=4.4.1",
    "numpy>=2.3.5",
    "peft>=0.18.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
